--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ url:                 https://dorfplatz-rotensee.de
 baseurl:             ''
 paginate:            5
 permalink:           pretty
+remote_theme: pages-themes/cayman@v0.2.0
+show_downloads: false
 
 # About/contact
 author:
@@ -16,6 +18,7 @@ author:
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-remote-theme
 
 # Custom vars
 version:             1.0
